--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -89,22 +89,10 @@
               </li>
   
                 <li class="nav-item ">
-                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
+                    <a class="nav-link" href="principalHomePage.html">الصفحة الرئيسية</a>
                 </li>
              
-                <li class="nav-item ">
-                    <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">الأحداث</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
-                </li>
-  
+
             </ul>
         </div>
     </nav>
@@ -158,6 +146,10 @@
 	border-radius: 60px;
 }
 </style>
+<div>
+
+    <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+</div>
 </body>
 </html>
 
