--- a/web-principal & Admin/addTeacherS.html
+++ b/web-principal & Admin/addTeacherS.html
@@ -81,14 +81,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
-                <li class="nav-item active">
-                    <a class="nav-link" href="javascript:void(0);"></a>
-                </li>
+                <div class="hori-selector"><div class="left" ></div><div class="right" ></div></div>
 
-                <li class="nav-item ">
-                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
-                </li>
+
              
                 <li class="nav-item ">
                     <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
@@ -102,7 +97,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);">المستندات</a>
                 </li>
-
+                <li class="nav-item ">
+                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
+                </li>  
+                <li class="nav-item active">
+                    <a class="nav-link" href="javascript:void(0);"></a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -155,6 +155,10 @@
 	border-radius: 60px;
 }
 </style>
+<div>
+
+    <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+</div>
 </body>
 </html>
 
