--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -139,5 +139,9 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
       </div>
+      <div>
+
+        <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+</div>
 </body>
 </html>
