--- a/web-principal & Admin/students.html
+++ b/web-principal & Admin/students.html
@@ -74,14 +74,12 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
+                <div class="hori-selector" ><div class="left"></div><div class="right" ></div></div>
                 <li class="nav-item active">
                     <a class="nav-link" href="javascript:void(0);"></a>
                 </li>
 
-                <li class="nav-item ">
-                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
-                </li>
+     
              
                 <li class="nav-item ">
                     <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
@@ -95,7 +93,12 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);">المستندات</a>
                 </li>
-
+                <li class="nav-item ">
+                    <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
+                </li>  
+                <li class="nav-item active">
+                    <a class="nav-link" href="javascript:void(0);"></a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -161,6 +164,9 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     <div class="screen__background__shape screen__background__shape2"></div>
     <div class="screen__background__shape screen__background__shape1"></div>
   </div>
+  <div>
 
+    <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+</div>
 </body>
 </html>
