--- a/web-principal & Admin/editAdmin.html
+++ b/web-principal & Admin/editAdmin.html
@@ -89,15 +89,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <div class="hori-selector" style="background-color: white;"><div class="left" style="background-color: white;"></div><div class="right" style="background-color: white;"></div></div>
-            <li class="nav-item active">
-                <a class="nav-link" href="javascript:void(0);"></a>
-            </li>
+            <div class="hori-selector" ><div class="left" ></div><div class="right" ></div></div>
 
-              <li class="nav-item">
-                  <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
-              </li>
-           
+
               <li class="nav-item ">
                   <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
               </li>
@@ -110,7 +104,12 @@
               <li class="nav-item">
                   <a class="nav-link" href="javascript:void(0);">المستندات</a>
               </li>
-
+              <li class="nav-item ">
+                <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
+            </li>  
+            <li class="nav-item active">
+                <a class="nav-link" href="javascript:void(0);"></a>
+            </li>
           </ul>
       </div>
   </nav>
@@ -155,4 +154,8 @@
   <div class="screen__background__shape screen__background__shape1"></div>
 </div>
 </body>
+<div>
+
+  <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+</div>
 </html>
