--- a/web-principal & Admin/editPrincipal.html
+++ b/web-principal & Admin/editPrincipal.html
@@ -153,6 +153,9 @@
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
       </div>
+      <div>
 
+        <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+</div>
 </body>
 </html>
