--- a/web-principal & Admin/editPrincipal.html
+++ b/web-principal & Admin/editPrincipal.html
@@ -154,15 +154,16 @@
         .form-popup {
           display: none;
           position: fixed;
-          bottom: 0;
-          right: 15px;
+          bottom: 10%;
+          right: 30%;
           border: 3px solid #f1f1f1;
           z-index: 9;
+          text-align: right;
         }
         
         /* Add styles to the form container */
         .form-container {
-          max-width: 300px;
+          max-width: 500px;
           padding: 10px;
           background-color: white;
         }
@@ -230,7 +231,7 @@
       </script>
     <div class="screen__background">
        
-        <div class="screen__background__shape screen__background__shape4"></div>
+
         <div class="screen__background__shape screen__background__shape3"></div>		
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
