adding loader to pages

--- a/web-principal & Admin/addTeacher.html
+++ b/web-principal & Admin/addTeacher.html
@@ -98,6 +98,7 @@
       <main>
 <div class="center">
   <h1>إضافة معلم</h1>
+  <div class="loader topTitle" style="top: 15vmax;"></div>
 
   <form class="addTeacher" id="modal-signup">
 
