--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -111,7 +111,7 @@
   <main>
     <div class="center">
         <h1>إضافة فصل</h1>
-        <div class="loader topTitle" style="top: 20em;"></div>
+        <div class="loader topTitle"></div>
         <form class="addClassForm">
 
 
@@ -141,7 +141,7 @@
     <div class="screen__background">
         <div class="screen__background__shape screen__background__shape7"></div>
         <div class="screen__background__shape screen__background__shape5"></div>
-        <div class="screen__background__shape screen__background__shape4"></div>
+     
         <div class="screen__background__shape screen__background__shape3"></div>		
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
@@ -339,7 +339,7 @@
 .loader {
   position: absolute;
   left: 50%;
-  top:5em;
+  top:12em;
   z-index: 1;
   width: 120px;
   height: 120px;
@@ -350,7 +350,6 @@
   border-right: 16px solid #6ce5e8;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  visibility: hidden;
 }
 
 @-webkit-keyframes spin {
