--- a/web-principal & Admin/index.html
+++ b/web-principal & Admin/index.html
@@ -99,7 +99,7 @@
            const logInform=document.getElementById("logIn");
           
 
-         
+           $(".loader").hide();
 
            submit.addEventListener('click',  async (e) => {
             Email = Email.value.toLowerCase();
