--- a/web-principal & Admin/addStudents.html
+++ b/web-principal & Admin/addStudents.html
@@ -38,7 +38,7 @@
  .loader {
   position: absolute;
   left: 50%;
-  top:5em;
+  top:25vmax;
   z-index: 1;
   width: 120px;
   height: 120px;
@@ -49,7 +49,7 @@
   border-right: 16px solid #6ce5e8;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  visibility: hidden;
+
 }
 
 @-webkit-keyframes spin {
@@ -112,7 +112,7 @@
     <main>
 
 <!-- add StudentS -->
-
+<div class="loader topTitle"></div>
 <div class="center">
         <h1 class="text-center mt-4 mb-4">إضافة قائمة طلاب</h1>
         <div class="card">
@@ -139,7 +139,7 @@
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
       </div>
-      <div class="loader topTitle"></div>
+      
 
 </main>
 
