--- a/web-principal & Admin/editPrincipal.html
+++ b/web-principal & Admin/editPrincipal.html
@@ -118,7 +118,8 @@
         <input type="text" required="required" id="snameInp"  >
         <span>اسم المدرسة </span>
      </div>
-     
+     <div class="loader topTitle"></div>
+
      <div class="inputbox">
         <input type="text"  id="fnameInp"   >
         <span>الاسم الأول لمدير المدرسة</span>
