add loader to reauthenticate

--- a/web-principal & Admin/editAdmin.html
+++ b/web-principal & Admin/editAdmin.html
@@ -118,7 +118,7 @@
   <div class="center" style="width: 99%;">
     <h1 >   معلومات الحساب</h1>
     <form id="updateForm">
-      <div class="loader topTitle"></div>
+      <div class="loader topTitle" style="z-index: 10;"></div>
  
  <div class="inputbox">
     <input type="text" required="required" id="fnameInp"   >
