--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -127,7 +127,7 @@
                 <option id="non" value="" name="non">--مستوى الطالب--</option>
                 </select>
                 <span
-                    style=" width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">المستوى</span>
+                    style=" width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">المرحلة</span>
             </div>
             <div class="inputbox">
                 <span style="color: rgb(157, 48, 48);" class="req">جميع الحقول مطلوبة*</span>
