clarification for adding multiple users

--- a/web-principal & Admin/addTeacherS.html
+++ b/web-principal & Admin/addTeacherS.html
@@ -114,12 +114,16 @@
         <h1 class="text-center mt-4 mb-4">إضافة قائمة من المعلمون</h1>
         <div class="card">
             <div class="card-header"><b>اختر ملف اكسل*</b></div>
+            <span style="color: rgb(157, 48, 48);" class="req">.١. قم بتنزيل نموذج الإضافة</span>
+            <span style="color: rgb(157, 48, 48);" class="req">.٢. قم بتعبئة النموذج بالبيانات</span>
+            <span style="color: rgb(157, 48, 48);" class="req">.٣. قم برفع الملف لإتمام الإضافة</span>
+            <br>
+            <button style="width: 50%; margin-left:25% ; border-radius: 60px;"  onclick="window.location.href='https://docs.google.com/spreadsheets/d/1hoGGnRVOkeyKilJMBGdQ9FFHBro6YAwOfctnO0QGbEE/edit#gid=1300969599'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
+
             <div class="card-body">
                 <input type="file" id="excel_file" />
             </div>
-<br>
-<button style="width: 50%; margin-left:25% ; border-radius: 60px;"  onclick="window.location.href='https://docs.google.com/spreadsheets/d/1hoGGnRVOkeyKilJMBGdQ9FFHBro6YAwOfctnO0QGbEE/edit#gid=1300969599'"  style="font-size:24px">نموذج الإضافة <i class="fa fa-file-excel-o" style="font-size:20px;color:green;"></i></button>
-<br>
+
 
         </div>
         <div id="excel_data" class="mt-5"></div>
