--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -124,7 +124,7 @@
       <select required=" true"
                 style="  margin-left: 50px; margin-top: 15px; padding: 10px; background: #4ebfc1; border: 2px solid #000; width:40%; height: 30px; text-align:center; "
                 id="classes" name="classes">
-                <option id="non" value="" name="non">--مستوى الطالب--</option>
+                <option id="non" value="" name="non">--المرحلة الدراسية--</option>
                 </select>
                 <span
                     style=" width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">المرحلة</span>
