--- a/web-principal & Admin/editAdmin.html
+++ b/web-principal & Admin/editAdmin.html
@@ -45,7 +45,11 @@
     const auth = getAuth();
     const user= auth.currentUser;
     //const uid= user.uid;//"kfGIwTyclpNernBQqSpQhkclzhh1";
+    
     onAuthStateChanged(auth, (user)=>{
+      if(user.displayName=="Principal"){
+            window.location.href="index.html";
+            }
         if(user){
             console.log("the same user");
             console.log(auth.currentUser);
