--- a/web-principal & Admin/principalHomePage.html
+++ b/web-principal & Admin/principalHomePage.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <script type="module">
 import { callAdmins } from './principal.js';
-import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
+import { getAuth, onAuthStateChanged, signOut, updateProfile  } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
  const auth = getAuth();
  const user= auth.currentUser;
     onAuthStateChanged(auth, (user)=>{
         if(user){
+            if(user.displayName!="Principal"){
+            window.location.href="index.html";
+            }
             const uid=user.uid;
+           
             document.getElementsByTagName('body').onload = callAdmins(uid);
             console.log("the same user");
-            console.log(auth.currentUser);
+            console.log(auth.currentUser.displayName);
         }
         else{
             window.location.href="index.html";
