--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <script type="module">
-         import{checkUser} from "./admin.js";
+         import{checkUser} from  "./principal.js";
   import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
    const auth = getAuth();
+   
 
    checkUser();
         
