--- a/web-principal & Admin/register.html
+++ b/web-principal & Admin/register.html
@@ -170,8 +170,8 @@
                 alert(error);
               });
 
-              updateProfile(auth.currentUser, {
-              displayName:"Principal"
+              await updateProfile(auth.currentUser, {
+              displayName:"Principal",
            });
                
            alert("تم تسجيل المدرسة بنجاح");
