--- a/web-principal & Admin/addTeacherS.html
+++ b/web-principal & Admin/addTeacherS.html
@@ -61,7 +61,7 @@
        align-items: center;
      }
          </style>
-    <title>إضافة قائمة معلمون</title>
+    <title>إضافة قائمة معلمين</title>
 </head>
 
 <body>
@@ -111,7 +111,7 @@
     <main>
 
 <div class="center">
-        <h1 class="text-center mt-4 mb-4">إضافة قائمة من المعلمون</h1>
+        <h1 class="text-center mt-4 mb-4">إضافة قائمة من المعلمين</h1>
         <div class="card">
             <div class="card-header"><b>اختر ملف اكسل*</b></div>
             <span style="color: rgb(157, 48, 48);" class="req">.١. قم بتنزيل نموذج الإضافة</span>
