--- a/web-principal & Admin/index.html
+++ b/web-principal & Admin/index.html
@@ -53,7 +53,7 @@
         <a href="register.html" class="alink">  مدرسة جديدة؟ التسجيل هنا</a>
         <br>
         
-        <a href="resetPassword.html" class="alink" >  نسيت كلمة المرور؟</a>
+        <a href="resetPassword.html" class="alink" style="margin-right: 50px;" >  نسيت كلمة المرور؟</a>
         <br>
     </div>
     <div class="screen__background">
