--- a/web-principal & Admin/resetPassword.html
+++ b/web-principal & Admin/resetPassword.html
@@ -50,7 +50,8 @@
            const app = initializeApp(firebaseConfig);
            const analytics = getAnalytics(app);
 
-           const Email=document.getElementById("emailInp");
+           var Email=document.getElementById("emailInp");
+           Email = Email.value.toLowerCase();
            const submit=document.getElementById("subButton");
            const resetForm=document.getElementById("reset");
 
