--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -102,7 +102,7 @@
 <main>
 
 <div class="center">
-        <h1 class="text-center mt-4 mb-4">إضافة قائمة من الأداريين</h1>
+        <h1 class="text-center mt-4 mb-4">إضافة قائمة من الإداريين</h1>
         <div class="card">
             <div class="card-header"><b>اختر ملف اكسل*</b></div>
             <span style="color: rgb(157, 48, 48);" class="req">.١. قم بتنزيل نموذج الإضافة</span>
