display date + add title for document

--- a/web-principal & Admin/addStudents.html
+++ b/web-principal & Admin/addStudents.html
@@ -96,7 +96,7 @@
                     <a class="nav-link" href="javascript:void(0);">الأحداث</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                    <a class="nav-link" href="documents.html">المستندات</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
