--- a/web-principal & Admin/adminHomePage.html
+++ b/web-principal & Admin/adminHomePage.html
@@ -99,7 +99,7 @@ import { getAuth, onAuthStateChanged,signOut } from "https://www.gstatic.com/fir
                     <a class="nav-link" href="javascript:void(0);">الأحداث</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                    <a class="nav-link" href="documents.html">المستندات</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
