--- a/web-principal & Admin/studentDocuments.html
+++ b/web-principal & Admin/studentDocuments.html
@@ -55,7 +55,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     <link rel="stylesheet" href="navbar.css"/>
     <script src="navbar.js"></script>
     
-    <title>الطلاب</title>
+    <title>مستندات الطالب</title>
     
     <style>
         th {text-align: center;}
@@ -100,7 +100,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                     <a class="nav-link" href="javascript:void(0);">الأحداث</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                    <a class="nav-link" href="documents.html">المستندات</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
