--- a/web-principal & Admin/students.html
+++ b/web-principal & Admin/students.html
@@ -90,7 +90,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                     <a class="nav-link" href="javascript:void(0);">الأحداث</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                    <a class="nav-link" href="documents.html">المستندات</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
@@ -154,8 +154,12 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
         </div>
     </div>
     <div id = 'button-container'>
+        
     <button class="button-5" role="button" id ="saveAttendence"><span>تسجيل الحضور</span></button>
-    </div>>
+    <br>
+    <br>
+    <h6 style="color: gray;"><script> document.write(new Date().toLocaleDateString());</script> :التاريخ</h6>
+    </div>
 
 </div>
   
