--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -94,7 +94,7 @@
                   <a class="nav-link" href="javascript:void(0);">الأحداث</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                  <a class="nav-link" href="documents.html">المستندات</a>
               </li>
 
               <li class="nav-item ">
@@ -120,7 +120,7 @@
                 <span>اسم الفصل</span>
             </div>
 
-            <div class="inputbox" ">
+            <div class="inputbox">
       <select required=" true"
                 style="  margin-left: 50px; margin-top: 15px; padding: 10px; background: #4ebfc1; border: 2px solid #000; width:40%; height: 30px; text-align:center; "
                 id="classes" name="classes">
