--- a/web-principal & Admin/teacherSubjectClass.html
+++ b/web-principal & Admin/teacherSubjectClass.html
@@ -90,7 +90,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                     <a class="nav-link" href="javascript:void(0);">الأحداث</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                    <a class="nav-link" href="documents.html">المستندات</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
