change after review

--- a/web-principal & Admin/students.html
+++ b/web-principal & Admin/students.html
@@ -128,7 +128,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                         <table class="table user-list">
                             <thead>
                                 <tr>
-                                <th><span>تحضير الطالب</span></th>
+                                <th><span>  تحضير الطالب <br><script> document.write(new Date().toLocaleDateString());</script> :التاريخ</span></th>
 
                                 <th><span>نقل طالب لفصل آخر</span></th>
 
@@ -156,9 +156,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     <div id = 'button-container'>
         
     <button class="button-5" role="button" id ="saveAttendence"><span>تسجيل الحضور</span></button>
-    <br>
-    <br>
-    <h6 style="color: gray;"><script> document.write(new Date().toLocaleDateString());</script> :التاريخ</h6>
+  
     </div>
 
 </div>
