--- a/web-principal & Admin/events.html
+++ b/web-principal & Admin/events.html
@@ -97,7 +97,7 @@
 
          
             <li class="nav-item ">
-                <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+                <a class="nav-link" href="pickup.html"> إصطحاب الطلاب</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
@@ -106,7 +106,7 @@
                 <a class="nav-link" href="events.html">الأحداث</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                <a class="nav-link" href="documents.html">المستندات</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
