--- a/web-principal & Admin/teacherSubjectClass.html
+++ b/web-principal & Admin/teacherSubjectClass.html
@@ -81,13 +81,13 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                 <div class="hori-selector" ><div class="left" ></div><div class="right" ></div></div>
 
                 <li class="nav-item ">
-                    <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+                    <a class="nav-link" href="pickup.html"> إصطحاب الطلاب</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0);">الأحداث</a>
+                    <a class="nav-link" href="events.html">الأحداث</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="documents.html">المستندات</a>
@@ -147,11 +147,11 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
                     </div>
 
                     <!-- Add rows button-->
-                    <input type="text" id="sname" name="sname" placeholder="اسم المادة" style="width:90%" >
+                    <input type="text" id="sname" name="sname" placeholder="اسم المادة" style="width:85%; text-align: center" >
                     <br>
-                    <button class="button-9 addSubject" id="add" type="button"style="width:90%">إضافة المادة</button>
+                    <button class="button-9 addSubject" id="add" type="button"style="width:85%;">إضافة المادة</button>
                     
-                    <button class="btn btn-danger rounded-0"  type="button" id='delete'><i class="fa fa-trash"></i></button>
+                    <button class="btn btn-danger rounded-0"  type="button" id='delete' style="margin-left: 3%"><i class="fa fa-trash"></i></button>
                 </div>
 
             </div>
@@ -165,8 +165,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
        
     <div class="screen__background__shape screen__background__shape4"></div>
     <div class="screen__background__shape screen__background__shape3"></div>		
-    <div class="screen__background__shape screen__background__shape2"></div>
-    <div class="screen__background__shape screen__background__shape1"></div>
+   
   </div>
 
   <div>
