--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -85,13 +85,13 @@
     
            
               <li class="nav-item ">
-                  <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+                  <a class="nav-link" href="pickup.html"> إصطحاب الطلاب</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0);">الأحداث</a>
+                  <a class="nav-link" href="events.html">الأحداث</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="documents.html">المستندات</a>
