--- a/web-principal & Admin/updateEvent.html
+++ b/web-principal & Admin/updateEvent.html
@@ -91,7 +91,7 @@
 
        
           <li class="nav-item ">
-              <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+              <a class="nav-link" href="pickup.html"> إصطحاب الطلاب</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
@@ -100,7 +100,7 @@
               <a class="nav-link" href="events.html">الأحداث</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0);">المستندات</a>
+              <a class="nav-link" href="documents.html">المستندات</a>
           </li>
           <li class="nav-item active">
               <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
