--- a/web-principal & Admin/events.html
+++ b/web-principal & Admin/events.html
@@ -97,16 +97,16 @@
 
          
             <li class="nav-item ">
-                <a class="nav-link" href="javascript:void(0);"> إصطحاب الطلاب</a>
+                <a class="nav-link" href="pickup.html"> إصطحاب الطلاب</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0);"></i>الإعلانات</a>
+                <a class="nav-link" href="announcement.html"></i>الإعلانات</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="events.html">الأحداث</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0);">المستندات</a>
+                <a class="nav-link" href="documents.html">المستندات</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link" href="adminHomePage.html">الصفحة الرئيسية</a>
@@ -117,6 +117,7 @@
   <!--end of nav -->
   <br>
   <h2> قائمة الأحداث </h2>
+  <div class="loader topTitle" style="top: 25vmax;"></div>
   <button class="button" type="button" onclick="window.location.href='addEvent.html'">إضافة</button>
   <div class="row">
     <div class="col-lg-10 mx-auto">
