adding doc & absence files

--- a/web-principal & Admin/class.html
+++ b/web-principal & Admin/class.html
@@ -129,7 +129,7 @@
                 <span
                     style=" width:40%;  text-align:center; border-radius: 10px; font-size: 1.2em; position: absolute; ">المرحلة</span>
             </div>
-            <div class="inputbox">
+            <div class="inputbox" id="alertContainer">
                 <span style="color: rgb(157, 48, 48);" class="req">جميع الحقول مطلوبة*</span>
               </div>
             <div class="inputbox">
