--- a/web-principal & Admin/students.html
+++ b/web-principal & Admin/students.html
@@ -51,6 +51,7 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     
     <link href="students.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"/>
 	
     <link rel="stylesheet" href="navbar.css"/>
     <script src="navbar.js"></script>
@@ -113,8 +114,9 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
            <div class="section-title text-center ">
            <h3 class="topTitle" id="className" style="margin-top:5%;"></h3>
 
-              
+              <div id="alertContainer"></div>
            </div>
+
        </div>
    </div>
 
