--- a/web-principal & Admin/AddAdminS.html
+++ b/web-principal & Admin/AddAdminS.html
@@ -44,6 +44,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="navbar.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"/>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
