--- a/web-principal & Admin/addAdmin.html
+++ b/web-principal & Admin/addAdmin.html
@@ -40,6 +40,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="navbar.css"/>
+    <link rel="stylesheet" href="style.css"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"/>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -117,7 +118,7 @@
       <span>البريد الإلكتروني</span>
     </div>
 
-  <div class="inputbox">
+  <div class="inputbox" id="alertContainer">
     <span  style="color: rgb(157, 48, 48);" class="req">جميع الحقول مطلوبة*</span>
   </div>
 
