--- a/web-principal & Admin/editPrincipal.html
+++ b/web-principal & Admin/editPrincipal.html
@@ -11,7 +11,7 @@
     <link href="create.css" rel="stylesheet" >
     <script src="principalEdit.js" type="module"></script>
     <title>معلومات الحساب</title>
-
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="navbar.css"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"/>
@@ -138,7 +138,8 @@
         <input type="password"   id="passInp">
         <span>كلمة السر</span>
       </div>
-      
+      <div class="inputbox" id = 'alertContainer'>
+      </div>
       <div class="inputbox" style="margin-left: 15%;">
         <button type="text" id="subButton" class="btn" onclick="openForm();" >حفظ</button>
     </div>
