--- a/web-principal & Admin/teacherSubjectClass.html
+++ b/web-principal & Admin/teacherSubjectClass.html
@@ -113,8 +113,8 @@ import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/fi
         <div class="col-lg-8 mx-auto">
             <h1 class="display-4" id="title">مواد </h1>
             <div class="loader topTitle"></div>
-                </a>
-            </p>
+            <div id="alertContainer"></div>
+ 
         </div>
     </div>
 </div>
