--- a/web-principal & Admin/uploadDocument.html
+++ b/web-principal & Admin/uploadDocument.html
@@ -135,7 +135,7 @@
         <form class="docForm">
 
             <div class="inputbox">
-      <select required=" true"
+      <select 
                 style="  margin-left: 50px; margin-top: 15px; padding: 10px; border: 2px solid #000; width:50%; height: 50px; text-align:center; "
                 id="classes" name="classes" multiple>
 
