--- a/web-principal & Admin/addTeacher.html
+++ b/web-principal & Admin/addTeacher.html
@@ -37,9 +37,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"/>
+
     <link rel="stylesheet" href="navbar.css"/>
     <link rel="stylesheet" href="style.css"/>
-    <script src="navbar.js"></script>
     
     <style>
    main {
@@ -167,6 +168,7 @@ border-radius: 60px;
 
   <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
 </div>
+<script src="navbar.js"></script>
 </body>
 </html>
 
