--- a/web-principal & Admin/events.html
+++ b/web-principal & Admin/events.html
@@ -53,7 +53,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="navbar.js"></script>
 <link rel="stylesheet" href="events.css"/>
 <link rel="stylesheet" href="style.css"/>
 <link href="students.css" rel="stylesheet">
@@ -140,7 +139,12 @@
    
     <div class="screen__background__shape screen__background__shape1"></div>
   </div>
- 
+  <div>
+
+    <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+  </div>
+  <script src="navbar.js"></script>
+
 </body>
 </html>
 
