--- a/web-principal & Admin/bysomeone.html
+++ b/web-principal & Admin/bysomeone.html
@@ -54,7 +54,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 
-<script src="navbar.js"></script>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -162,5 +161,10 @@
         </div>
       </div>
     </div>
+    <div>
+
+      <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+    </div>
+    <script src="navbar.js"></script>
   </body>
 </html>
