--- a/web-principal & Admin/editAdmin.html
+++ b/web-principal & Admin/editAdmin.html
@@ -1,7 +1,4 @@
 
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +17,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 
-<script src="navbar.js"></script>
 
 <style>
   main {
@@ -210,6 +206,9 @@
   .form-container .btn:hover, .open-button:hover {
     opacity: 1;
   }
+  .alert .inner{
+    margin-right: 46px;
+  }
   </style>
 <div class="form-popup" id="myForm">
   <form  class="form-container">
@@ -241,9 +240,12 @@ function closeForm() {
   <div class="screen__background__shape screen__background__shape2"></div>
   <div class="screen__background__shape screen__background__shape1"></div>
 </div>
-</body>
 <div>
 
   <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
 </div>
+<script src="navbar.js"></script>
+
+</body>
+
 </html>
