--- a/web-principal & Admin/updateAnnouncement.html
+++ b/web-principal & Admin/updateAnnouncement.html
@@ -50,7 +50,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="navbar.js"></script>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -69,6 +68,12 @@
      justify-content:center;
      align-items: center;
    }
+   .loader {
+  margin-top: 136px;
+    }
+    .alert .inner {
+      margin-right: 49px;
+    }
        </style>
 </head>
 <body>
@@ -141,7 +146,20 @@
 
     </form>
     </div>
-  
-<main>
+    <div class="screen__background">
+      <div class="screen__background__shape screen__background__shape7"></div>
+      <div class="screen__background__shape screen__background__shape5"></div>
+   
+      <div class="screen__background__shape screen__background__shape3"></div>		
+      <div class="screen__background__shape screen__background__shape2"></div>
+      <div class="screen__background__shape screen__background__shape1"></div>
+    </div>
+  </main>
+  <div>
+
+    <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
+  </div>
+  <script src="navbar.js"></script>
+
 </body>
 </html>
