--- a/web-principal & Admin/uploadDocument.html
+++ b/web-principal & Admin/uploadDocument.html
@@ -53,7 +53,6 @@
 
     <link rel="stylesheet" href="./vanillaSelectBox.css">
     <script src="./vanillaSelectBox.js"></script>
-<script src="navbar.js"></script>
     <title>إضافة مستند</title>
 
     <style>
@@ -75,6 +74,9 @@
   height: 100%;
   text-align: center;
 } 
+.inner{
+  width: 88%;
+}
    </style>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
@@ -174,7 +176,7 @@
         <div class="screen__background__shape screen__background__shape7"></div>
         <div class="screen__background__shape screen__background__shape5"></div>
      
-        <div class="screen__background__shape screen__background__shape3"></div>		
+       
         <div class="screen__background__shape screen__background__shape2"></div>
         <div class="screen__background__shape screen__background__shape1"></div>
       </div>
@@ -192,51 +194,11 @@ label {
 float: right;
 }
 
-.center {
-  display:inline;
-  margin-top: 100px;
-  position: relative;
-  padding: 50px 50px;
-  background: #fff;
-  border-radius: 10px;
-  margin-right: 50px;
-  margin-left: 50px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: 100%;
-}
-.center h1 {
-  font-size: 2em;
-  border-bottom: 5px solid #6ce5e8;
-  padding: 10px;
-  color: #000;
 
-  margin-bottom: 40px;
-  font-weight: bold;
-  padding-left: 10px;
-  text-align: center;
-}
- 
-.center .inputbox {
-  position: relative;
-  width: 400px;
-  height: 50px;
-  margin-bottom: 40px;
-  margin-top: 20px;
-  margin-left: 50px;
-}
+
+
 .center .inputbox input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  border: 1px solid #000;
-  outline: none;
-  background: none;
-  padding: 10px;
-  border-radius: 10px;
-  font-size: 1.2em;
-  text-align: right;
-  margin-left: 30px;
+  top: 6px;
 }
 
     .center .inputbox:last-child {
@@ -288,123 +250,25 @@ float: right;
   margin-bottom:10px;
   opacity: 0.8;
 }
-.button-36 {
-  margin-left: 30px;
-  background-image: linear-gradient(92.88deg, #3790ad 9.16%, #3790ad 43.89%, #3790ad 64.72%);
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  flex-shrink: 0;
-  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  height: 3rem;
-  width: 25rem;
-  padding: 16px 20px;
-  margin-right: 0px;
-  text-align: center;
-  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
-  transition: all .5s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  box-align: right;
-}
-.screen__background__shape {
-	transform: rotate(45deg);
-	position: absolute;
-}
-.screen__background__shape1 {
-	height: 520px;
-	width: 520px;
-  background: linear-gradient(45deg, #4ebfc1 0%, #75a79b 100%);		
-	top: -20px;
-	left: 150px;	
-  z-index: -1;
-	border-radius: 72px 72px 72px 72px;
-}
 
-.screen__background__shape2 {
-	height: 220px;
-  z-index: -1;
-	width: 220px;
-	background: cadetblue;	
-	top: -100px;
-	left: 0;	
-	border-radius: 32px;
-}
 
-.screen__background__shape3 {
-	height: 500px;
-	width: 190px;
-  z-index: -1;
-	top: 100px;
-  background: linear-gradient(45deg,#b9bebd  25%, #4bcacf 100%);		
-	left: 77%;	
-	border-radius: 32px;
-}
 
-.screen__background__shape5 {
-	height: 540px;
-	width: 190px;
-	top: 25%;
-  z-index: -1;
-  background: linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
-	left: 0;	
-	border-radius: 32px;
-}
-.screen__background__shape6 {
-	height: 520px;
-	width: 580px;
-  background: linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
-	top: 45em;
-	left: 80%;	
-  z-index: -1;
-	border-radius: 72px 72px 72px 72px;
-}
 
-.screen__background__shape7 {
-	height: 440px;
-	width: 200px;
-  z-index: -1;
-	top: 90px;
-  background:linear-gradient(45deg,#dfdade  0%, #e7e8ea 100%);		
-	left: 70%;	
-	border-radius: 32px;
-}
 
 .loader {
-  position: absolute;
-  left: 50%;
+
   top:12em;
-  z-index: 1;
-  width: 120px;
-  height: 120px;
-  margin: -76px 0 0 -76px;
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #6ce5e8;
-  border-right: 16px solid #6ce5e8;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+
 }
 
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
     </style>
-
-</body>
 <div>
 
   <footer><a href="mailto:Halaqa.KSU@gmail.com"> Halaqa.KSU@gmail.com</a> :للدعم الفني والاستفسارات يرجى التواصل عبر البريد</footer>    
 </div>
+<script src="navbar.js"></script>
+
+</body>
+
 </html>
